# netusage-linux

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/netusage-common/: Cargo.toml
crates/netusage-common/src/: counters.rs  lib.rs
crates/netusage-common/src/preflight/: btf.rs  caps.rs  cgroup.rs  env.rs  kernel.rs  mod.rs
crates/netusage-ebpf/: Cargo.toml  rust-toolchain.toml
crates/netusage-ebpf/.cargo/: config.toml
crates/netusage-ebpf/src/: main.rs  maps.rs  packet.rs
crates/netusage-ipc/: Cargo.toml
crates/netusage-ipc/src/: client.rs  codec.rs  error.rs  lib.rs  protocol.rs  server.rs
crates/netusage-ipc/tests/: roundtrip.rs  serialization.rs
crates/netusage-store/: Cargo.toml
crates/netusage-store/src/: aggregate.rs  apps.rs  config.rs  delete.rs  error.rs  lib.rs  period.rs  retention.rs  samples.rs  schema.rs  store.rs
crates/netusage-tui/: Cargo.toml  README.md
crates/netusage-tui/src/: app.rs  cli.rs  data.rs  error.rs  event.rs  format.rs  health.rs  main.rs  model.rs  period.rs  sort.rs  state.rs  update.rs  vpn.rs
crates/netusage-tui/src/release/: cache.rs  github.rs  mod.rs  version.rs
crates/netusage-tui/src/ui/: app_list.rs  detail.rs  footer.rs  mod.rs  period_bar.rs  summary.rs  theme.rs
crates/netusaged/: Cargo.toml  build.rs
crates/netusaged/src/: aggregator.rs  attach.rs  backfill.rs  cgroup.rs  check.rs  clear.rs  cli.rs  configure.rs  counters.rs  degraded.rs  fallback.rs  identity.rs  ipc_server.rs  loader.rs  main.rs  monitor.rs  privileges.rs  report.rs  resolver.rs  sampler.rs  selftest.rs  supervisor.rs
crates/netusaged/src/cgroup/: discovery.rs  identity.rs  inode.rs  mod.rs  registry.rs  watcher.rs
docs/: app-attribution.md  cgroup-attribution.md  kernel-matrix.md
docs/install/: README.md  arch.md  debian-ubuntu.md  fedora.md  manual-musl.md
packaging/: README.md
packaging/aur/: PKGBUILD  netusage.install
packaging/deb/: postinst  postrm  prerm
packaging/systemd/: netusaged.service
packaging/systemd/sysusers.d/: netusaged.conf
packaging/systemd/tmpfiles.d/: netusaged.conf
