[package]
name = "netusage-tui"
version = "0.1.0"
edition = "2021"
description = "Interfaz de terminal (TUI) de netusage"
license = "MIT"

[[bin]]
name = "netusage-tui"
path = "src/main.rs"

[dependencies]
# TUI. Se usa la 0.29 (crossterm integrado, API estable) en vez de la 0.30
# modularizada; ver desviaciones.
ratatui = "0.29"
# Capa de datos: lectura de la base en modo solo lectura (camino primario de la
# Fase 4), sin privilegios.
netusage-store = { path = "../netusage-store" }
# Informe de entorno: para avisar si el sistema corre en modo degradado.
netusage-common = { path = "../netusage-common" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
