[package]
name = "netusaged"
version = "0.1.0"
edition = "2021"
description = "Demonio privilegiado de netusage (carga eBPF, persistencia, diagnostico)"
license = "MIT"

[[bin]]
name = "netusaged"
path = "src/main.rs"

[dependencies]
netusage-common = { path = "../netusage-common" }
aya = "0.13"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# sock_diag (netlink) para obtener el cookie de los sockets ya abiertos al
# arrancar (backfill de sockets preexistentes).
netlink-sys = "0.8"
netlink-packet-core = "0.7"
netlink-packet-sock-diag = "0.4"
