[package]
name = "netusaged"
version = "0.1.0"
edition = "2021"
description = "Demonio privilegiado de netusage (carga eBPF, persistencia, diagnostico)"
license = "MIT"

[[bin]]
name = "netusaged"
path = "src/main.rs"

[dependencies]
netusage-common = { path = "../netusage-common" }
netusage-store = { path = "../netusage-store" }
netusage-ipc = { path = "../netusage-ipc" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
aya = "0.13"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# Modelo de privilegios: detección de capabilities y de root.
caps = "0.5"
rustix = { version = "1", features = ["process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# sock_diag (netlink) para obtener el cookie de los sockets ya abiertos al
# arrancar (backfill de sockets preexistentes).
netlink-sys = "0.8"
netlink-packet-core = "0.7"
netlink-packet-sock-diag = "0.4"

# --- Empaquetado .deb (cargo-deb) ---
# Las rutas de origen son relativas al directorio de este manifiesto. El binario
# de la TUI y los ficheros de systemd viven fuera del crate, de ahi los `../../`.
# Construir con: `cargo build --release -p netusaged -p netusage-tui` y luego
# `cargo deb --no-build -p netusaged`.
[package.metadata.deb]
maintainer = "Dayan Cabrera <dcabrera@evercreate.co>"
copyright = "2026, Dayan Cabrera"
section = "net"
priority = "optional"
extended-description = "Monitor de uso de red por aplicacion para Linux, al estilo Android, basado en eBPF (cgroup_skb). Incluye el demonio privilegiado (netusaged) y la interfaz de terminal (netusage-tui)."
assets = [
    ["target/release/netusaged", "usr/bin/", "755"],
    ["target/release/netusage-tui", "usr/bin/", "755"],
    ["../../packaging/systemd/netusaged.service", "usr/lib/systemd/system/", "644"],
    ["../../packaging/systemd/sysusers.d/netusaged.conf", "usr/lib/sysusers.d/", "644"],
    ["../../packaging/systemd/tmpfiles.d/netusaged.conf", "usr/lib/tmpfiles.d/", "644"],
]
maintainer-scripts = "../../packaging/deb/"

# --- Empaquetado .rpm (cargo-generate-rpm) ---
# Las rutas de origen son relativas al directorio de este manifiesto. Construir
# con `cargo build --release -p netusaged -p netusage-tui` y luego
# `cargo generate-rpm -p crates/netusaged`.
[package.metadata.generate-rpm]
summary = "Monitor de uso de red por aplicacion (eBPF) para Linux"
assets = [
    { source = "../../target/release/netusaged", dest = "/usr/bin/netusaged", mode = "755" },
    { source = "../../target/release/netusage-tui", dest = "/usr/bin/netusage-tui", mode = "755" },
    { source = "../../packaging/systemd/netusaged.service", dest = "/usr/lib/systemd/system/netusaged.service", mode = "644" },
    { source = "../../packaging/systemd/sysusers.d/netusaged.conf", dest = "/usr/lib/sysusers.d/netusaged.conf", mode = "644" },
    { source = "../../packaging/systemd/tmpfiles.d/netusaged.conf", dest = "/usr/lib/tmpfiles.d/netusaged.conf", mode = "644" },
]
# Tras instalar: crea el usuario de sistema y los directorios, y activa el
# servicio para que el demonio arranque y cree la base sin intervencion manual.
post_install_script = """
systemd-sysusers /usr/lib/sysusers.d/netusaged.conf >/dev/null 2>&1 || true
systemd-tmpfiles --create /usr/lib/tmpfiles.d/netusaged.conf >/dev/null 2>&1 || true
systemctl daemon-reload >/dev/null 2>&1 || true
systemctl enable netusaged.service >/dev/null 2>&1 || true
if [ -d /run/systemd/system ]; then
    systemctl start netusaged.service >/dev/null 2>&1 || true
fi
"""
# Antes de la eliminacion definitiva (no en upgrade, donde $1 >= 1): detener y
# desactivar el servicio.
pre_uninstall_script = """
if [ "$1" = "0" ]; then
    systemctl --no-reload disable netusaged.service >/dev/null 2>&1 || true
    if [ -d /run/systemd/system ]; then
        systemctl stop netusaged.service >/dev/null 2>&1 || true
    fi
fi
"""
# Tras eliminar: recargar systemd para que olvide la unit retirada.
post_uninstall_script = """
systemctl daemon-reload >/dev/null 2>&1 || true
"""
